--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "json:serve": "json-server --watch db.json --port 8082",
+		"start": "concurrently -k -r \"npm:json:serve\" \"npm:electron:serve\""
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.4.4",
+    "json-server": "^0.15.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
@@ -23,6 +27,7 @@
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "concurrently": "^5.1.0",
     "electron": "^6.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
