--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "json:serve": "json-server --watch db.json --port 8082",
-		"start": "concurrently -k -r \"npm:json:serve\" \"npm:electron:serve\""
+    "start": "concurrently -k -r \"npm:json:serve\" \"npm:electron:serve\""
   },
   "main": "background.js",
   "dependencies": {
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
     "json-server": "^0.15.1",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
